--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,3 +6,9 @@ services:
         volumes:
          - "./github:/code"
         command: scrapy crawl github
+
+    crontab:
+        image: sixzeroo/github_crawler:0.1
+        volumes:
+         - "./github:/code"
+        command: yacron -c crontab.yaml
