--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,24 @@
+aiohttp==3.1.1
+aiosmtplib==1.0.2
 asn1crypto==0.24.0
+async-timeout==2.0.1
 attrs==17.4.0
 Automat==0.6.0
 certifi==2018.1.18
 cffi==1.11.5
 chardet==3.0.4
 constantly==15.1.0
+crontab==0.22.0
 cryptography==2.1.4
 cssselect==1.0.3
 hyperlink==18.0.0
 idna==2.6
+idna-ssl==1.0.1
 incremental==17.5.0
+Jinja2==2.10
 lxml==4.2.0
+MarkupSafe==1.0
+multidict==4.1.0
 parsel==1.4.0
 pyasn1==0.4.2
 pyasn1-modules==0.2.1
@@ -18,14 +26,21 @@ pycparser==2.18
 PyDispatcher==2.0.5
 pymongo==3.6.1
 pyOpenSSL==17.5.0
+python-dateutil==2.7.2
 queuelib==1.5.0
+raven==6.6.0
+raven-aiohttp==0.7.0
 redis==2.10.6
 requests==2.18.4
+ruamel.yaml==0.15.37
 Scrapy==1.5.0
 scrapy-redis==0.6.8
 service-identity==17.0.0
 six==1.11.0
+strictyaml==0.11.7
 Twisted==17.9.0
 urllib3==1.22
 w3lib==1.19.0
+yacron==0.7.0
+yarl==1.1.1
 zope.interface==4.4.3
