--- a/github/crontab.yaml
+++ b/github/crontab.yaml
@@ -2,4 +2,4 @@ jobs:
   - name: updateCookie
     command: ./updateCookie.sh
     shell: /bin/bash
-    schedule: "* */4 * * *"
+    schedule: "0 4,8,12,16,20,23 * * *"
